# mccformers.pytorch

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  datasets.py  engine.py  evaluate_coco_caption.py  extract_features.py  preprocess_eval_data.py  pyproject.toml  test.py  train.py  utils.py
configs/: test_cmc_dataset.yaml  test_original_cmc_dataset.yaml  train_cmc_dataset.yaml  train_original_cmc_dataset.yaml  train_rcc_dataset.yaml
datasets/: cc_dataset.py  cmc_dataset.py  original_cmc_dataset.py
models/: __init__.py  model.py  resnet.py  transformers.py
tests/: test_dataset.py  test_model.py
