[tool.poetry]
name = "mccformers"
version = "0.1.0"
description = "Re-implementation of MCCFormers for change captioning"
authors = ["Kento Doi <doi.kento@weblab.t.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8.1"
h5py = ""
torch = "1.8.0"
torchvision = "0.9.0"
hydra-core = "stable"
hydra_colorlog = "^1.0.0"
tensorboard = "^2.5.0"
tqdm = ""

[tool.poetry.dev-dependencies]
pytest = ""
flake8 = ""
autopep8 = ""
isort = ""
pre-commit = "^2.15.0"
jupyterlab = ""
matplotlib = ""

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
